; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcclibs/libcpp/extr_mkdeps.c_deps_save.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcclibs/libcpp/extr_mkdeps.c_deps_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.deps = type { i64, i64** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @deps_save(%struct.deps* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.deps*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.deps* %0, %struct.deps** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.deps*, %struct.deps** %4, align 8
  %9 = getelementptr inbounds %struct.deps, %struct.deps* %8, i32 0, i32 0
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @fwrite(i64* %9, i64 8, i32 1, i32* %10)
  %12 = icmp ne i32 %11, 1
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %53

14:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %49, %14
  %16 = load i32, i32* %6, align 4
  %17 = zext i32 %16 to i64
  %18 = load %struct.deps*, %struct.deps** %4, align 8
  %19 = getelementptr inbounds %struct.deps, %struct.deps* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ult i64 %17, %20
  br i1 %21, label %22, label %52

22:                                               ; preds = %15
  %23 = load %struct.deps*, %struct.deps** %4, align 8
  %24 = getelementptr inbounds %struct.deps, %struct.deps* %23, i32 0, i32 1
  %25 = load i64**, i64*** %24, align 8
  %26 = load i32, i32* %6, align 4
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i64*, i64** %25, i64 %27
  %29 = load i64*, i64** %28, align 8
  %30 = call i64 @strlen(i64* %29)
  store i64 %30, i64* %7, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @fwrite(i64* %7, i64 8, i32 1, i32* %31)
  %33 = icmp ne i32 %32, 1
  br i1 %33, label %34, label %35

34:                                               ; preds = %22
  store i32 -1, i32* %3, align 4
  br label %53

35:                                               ; preds = %22
  %36 = load %struct.deps*, %struct.deps** %4, align 8
  %37 = getelementptr inbounds %struct.deps, %struct.deps* %36, i32 0, i32 1
  %38 = load i64**, i64*** %37, align 8
  %39 = load i32, i32* %6, align 4
  %40 = zext i32 %39 to i64
  %41 = getelementptr inbounds i64*, i64** %38, i64 %40
  %42 = load i64*, i64** %41, align 8
  %43 = load i64, i64* %7, align 8
  %44 = load i32*, i32** %5, align 8
  %45 = call i32 @fwrite(i64* %42, i64 %43, i32 1, i32* %44)
  %46 = icmp ne i32 %45, 1
  br i1 %46, label %47, label %48

47:                                               ; preds = %35
  store i32 -1, i32* %3, align 4
  br label %53

48:                                               ; preds = %35
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %6, align 4
  %51 = add i32 %50, 1
  store i32 %51, i32* %6, align 4
  br label %15

52:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %53

53:                                               ; preds = %52, %47, %34, %13
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @fwrite(i64*, i64, i32, i32*) #1

declare dso_local i64 @strlen(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
